--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^3.3.0",
     "next": "10.0.6",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "vercel": "^21.2.3"
   }
 }
