--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "college-spin-wheel",
+  "name": "Spell Bee",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,8 +16,8 @@
     "array-shuffle": "^2.0.0",
     "framer-motion": "^3.3.0",
     "next": "10.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "vercel": "^21.2.3"
   }
 }
